Beginning of the examples section. Added references.

--- a/text/imgPCA.bib
+++ b/text/imgPCA.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Roberto Stelling at 2018-02-08 11:39:22 -0200 
+%% Created for Roberto Stelling at 2018-02-09 17:07:50 -0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{krizhevsky2009learning,
+	Author = {Krizhevsky, Alex and Hinton, Geoffrey},
+	Date-Added = {2018-02-09 18:58:43 +0000},
+	Date-Modified = {2018-02-09 18:58:56 +0000},
+	Keywords = {cifar},
+	Publisher = {Citeseer},
+	Title = {Learning multiple layers of features from tiny images},
+	Year = {2009}}
 
 @book{lawson1974solving,
 	Author = {Lawson, C.L. and Hanson, R.J.},
