--- a/text/imgPCA.tex
+++ b/text/imgPCA.tex
@@ -8,7 +8,7 @@
 \usepackage{graphicx}
 \graphicspath{ {images/} }	
 
-\title{ImgPCA \\ A data visualization for PCA Analysis \\ MAI718 3/2017 Final project}
+\title{ImgPCA \\ A data visualization tool for PCA Analysis \\ MAI718 3/2017 Final project}
 
 % Authors must not appear in the submitted version. They should be hidden
 % as long as the \iclrfinalcopy macro remains commented out below.
@@ -144,7 +144,7 @@ If we were to use a rule similar to Kaiser's Rule\footnote{Eigenvalues greater t
 \caption{ImgPCA screenshot.}
 \end{figure}
 \section{Examples}
-For the next few examples we are going to use a subset of CIFAR-10 (\citet{krizhevsky2009learning}, chapter 3) images modified to fit our purposes. CIFAR-10 is a collection of $32\times 32$ color images that are available in python, Matlab and binary versions. We converted CIFAR-10 images to grayscale (see \nameref{materials}), rotated the images 90 degrees to produced input files for our tool.\par
+For the next few examples we are going to use a subset of CIFAR-10 (\citet{krizhevsky2009learning}, chapter 3) images modified to fit our purposes. CIFAR-10 is a collection of $32\times 32$ color images that are available in python, Matlab and binary versions. We converted CIFAR-10 images to grayscale (see \nameref{materials}), rotated the images 90 degrees to produce input files for our tool.\par
 
 For the first example will use 1024 images from all CIFAR-10 classes, in the order they appear on the original file.\par
 
