Small changes on the "Examples" section

--- a/text/imgPCA.tex
+++ b/text/imgPCA.tex
@@ -120,7 +120,7 @@ To transform $P$ back into $D$ space we compute \[P_{m\times k}U_{k\times n}^T =
 The problem of selecting how many components to retain is not new, \citet{zwick1986comparison}, present the results of a Monte Carlo evaluation of five methods that have been proposed for determining how many factors or components to retain: Horn's parallel analysis, Velicer's minimum average partial, Cattell's scree test, Bartlett's chi-square test, and Kaiser's eigenvalue greater than $1.0$ rule. 
 The determination of the number of components or factors to retain is likely to be the most important decision a researcher will make \citep{zwick1986comparison}.\par
 
-We propose that a graphical supporting tool, with a graph similar to Cattell's scree plot but showing $\log_{10} eigenvalues$ instead of $eigenvalues$, with on the fly representations of a subset of the compressed images, and a subset of the eigenimages, can be instrumental in the decision of how many dimensions must be retained. We suggest that the use of eigenimages can increase the analyst understanding of the variation and trends of main eigenvectors of the data set.\par
+We propose that a graphical supporting tool, with a graph similar to Cattell's scree plot but displaying $\log_{10} eigenvalues$ instead of $eigenvalues$, plus on the fly representations of a subset of the compressed images, and a subset of the eigenimages, can be instrumental in the decision of how many dimensions must be retained. We suggest that the use of eigenimages can increase the analyst understanding of the variation and trends of main eigenvectors of the data set.\par
 The number of dimensions to retain will eventually be a decision based on the supporting graphs and the recovered images. We include a couple of numeric measures on the cut off point:
 \begin{itemize}
 \item Accumulated variation retained.
@@ -147,15 +147,17 @@ Note that the Kaiser's Rule cut occurs exactly where the graph crosses $0$ ($\lo
 \section{Examples}
 For the next few examples we are going to use a subset of CIFAR-10 (\citet{krizhevsky2009learning}, chapter 3) images modified to fit our purposes. CIFAR-10 is a collection of $32\times 32$ color images that are available in python, Matlab and binary versions. We converted CIFAR-10 images to grayscale (see \nameref{materials}), rotated the images $90$ degrees to produce the input files for our usage.\par
 
-For the first example will use $1024$ images with $1024$ ($32\times 32$) pixels from all CIFAR-10 classes, in the order they appear on the original file.\par
-
 \begin{figure}[h]
 \begin{center}
 %\framebox[4.0in]{$\;$}
-\includegraphics{CIFAR10All1024Original.png}
+\includegraphics{CIFAR10All1024RecoveredNormalized.png}
 \end{center}
 \caption{Sample of CIFAR-10 grayscale images, all classes.}
+\label{fig:sampleCifar10}
 \end{figure}
+
+For the first example will use $1024$ images with $1024$ ($32\times 32$) pixels from all CIFAR-10 classes, in the order they appear on the original file. Figure \ref{fig:sampleCifar10} displays the same set of images, recovered with $302$ components, based on the "\emph{Tenth Kaiser's Rule}", and the original normalized images. There are a few artifacts on the recovered images but the results seems to be visually satisfactory.\par
+If we increase the number of images on the data set, adding additional $1024$ images for a total of $2048$ the 
 
 \section{Materials and Methods}\label{materials}
 The code for the implementation and supporting documents can be found at \citet{Stelling:aa}.
